tests/NormalTests/paczka2/big_fuzzy/57044641.err
Error in line 1: q5bLG2SA9c2 S624 18,0
Error in line 2: FlFLr34 A429 86,1
Error in line 11: FlFLr34 A639 -1,4
Error in line 10: FlFLr34 A639 15,1
Error in line 23: q5bLG2SA9c2 A639 94,2
Error in line 7: A639 A429 38,3
Error in line 27: NOw S624 71,8
Error in line 33: jZMXdAL1VU S624 26,7
Error in line 37: oxcKVp8 A998 42,4
Error in line 58: q5bLG2SA9c2 S624 12,35
Error in line 54: A639 A639 108,7
Error in line 59: A639 S624 80,9
Error in line 70: A639 A998 20,1
Error in line 76: NOw A429 161,9
Error in line 88: NOw S624 25,3
Error in line 69: q5bLG2SA9c2 S624 4,2
Error in line 90: q5bLG2SA9c2 A639 72,8
Error in line 96: FlFLr34 A998 15,9
Error in line 112: jZMXdAL1VU A639 5,6
Error in line 108: oxcKVp8 A998 82,7
Error in line 107: NOw A998 46,7
Error in line 115: oxcKVp8 A429 13,1
Error in line 117: NOw A639 3,3
Error in line 133: NOw A998 77,6
Error in line 134: NOw S624 37,1
Error in line 124: oxcKVp8 A429 52,2
Error in line 140: q5bLG2SA9c2 S624 39,8
Error in line 154: A639 S624 66,7
Error in line 157: AFYj2i5qq2 S624 83,2
Error in line 156: q5bLG2SA9c2 A639 91,4
Error in line 180: jZMXdAL1VU S624 1,6
Error in line 181: jZMXdAL1VU A429 33,8
Error in line 195: AFYj2i5qq2 A639 99,1
Error in line 203: AFYj2i5qq2 A998 56,1
Error in line 211: A639 A998 8,87
Error in line 179: FlFLr34 A429 48,4
Error in line 207: NOw A998 70,1
Error in line 215: oxcKVp8 A998 99,1
Error in line 214: NOw A429 10,5
Error in line 219: NOw S624 21,9
Error in line 233: A639 A639 1,49
Error in line 240: q5bLG2SA9c2 A639 48,0
Error in line 239: FlFLr34 A639 44,2
Error in line 241: NOw A639 4,1
Error in line 245: q5bLG2SA9c2 A429 48,8
